; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ofw/extr_openfirm.c_OF_device_register_xref.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ofw/extr_openfirm.c_OF_device_register_xref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xrefinfo = type { i32 }

@xref_init_done = common dso_local global i64 0, align 8
@FIND_BY_XREF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"Attempt to register device before xreflist_init\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @OF_device_register_xref(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.xrefinfo*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i64, i64* @xref_init_done, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %24

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @FIND_BY_XREF, align 4
  %12 = call %struct.xrefinfo* @xrefinfo_find(i32 %10, i32 %11)
  store %struct.xrefinfo* %12, %struct.xrefinfo** %6, align 8
  %13 = icmp eq %struct.xrefinfo* %12, null
  br i1 %13, label %14, label %19

14:                                               ; preds = %9
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @xrefinfo_add(i32 %15, i32 %16, i32 %17)
  br label %23

19:                                               ; preds = %9
  %20 = load i32, i32* %5, align 4
  %21 = load %struct.xrefinfo*, %struct.xrefinfo** %6, align 8
  %22 = getelementptr inbounds %struct.xrefinfo, %struct.xrefinfo* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  br label %23

23:                                               ; preds = %19, %14
  store i32 0, i32* %3, align 4
  br label %26

24:                                               ; preds = %2
  %25 = call i32 @panic(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0))
  br label %26

26:                                               ; preds = %24, %23
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local %struct.xrefinfo* @xrefinfo_find(i32, i32) #1

declare dso_local i32 @xrefinfo_add(i32, i32, i32) #1

declare dso_local i32 @panic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
